# Franka-Walker

./: .gitattributes  .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  controller.cpp  environment.yaml  example.cpp  requirements.txt  requirements_S-CHOI-S.txt  requirements_vessl.txt
.ipynb_checkpoints/: requirements-checkpoint.txt
include/: controller.h  pybind_controller.h  trajectory.h
model/: pandaquest_scene.xml  walker2d-ipo.xml
src/: .gitignore  MUJOCO_LOG.TXT  TD_actor_critic.py  Untitled.ipynb  ViT.ipynb  ViT.py  ViT_FeatureExtraction.py  ViT_MNIST.py  __init__.py  cartpole_example.py  color_code.py  controller.cpp  custom_robot_model.py  environment_creation.ipynb  humanoid.py  image_sac.py  neuralnet_example.py  plot_constraint.py  plot_reward.py  pybind_controller.cpp  reinforce_invpend_gym_v26.ipynb  reinforce_invpend_gym_v26.py  sac_example.py  sac_reacher.py  sac_reacher_sb3.py  soft_actor_critic.py  trajectory.cpp  tutorials.ipynb  vit_sac.py  viz_humanoid.py  viz_walker.ipynb  viz_walker.py  walker.ipynb  walker.py  walker2.ipynb
src/.ipynb_checkpoints/: LunarLander_example-checkpoint.py  custom_robot_model-checkpoint.py
src/model/sac/: sac.pth  sac_reacher.pth  sac_reacher1.pth
src/tmp/sac/: actor_sac  critic_1_sac  critic_1sac  critic_2_sac  critic_2sac  sac_actor  sac_critic_1  sac_critic_2  sac_target_value  sac_value  target_value_sac  value_sac
